Correct search card styling and add horizontal scrolling for long titles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-} 
+}
 
 .gradient-01 {
   position: absolute;
@@ -59,3 +59,15 @@ body {
   filter: blur(200px);
 }
 
+@layer components {
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  }
+}
